# sui

./: Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
mathrobo/: basic.py  lie_abst.py  se3.py  so3.py
sui/: __init__.py  basic.py  geo.py  geometry.py  lie_abst.py  se3.py  so3.py  sui.py  trans.py
test/: test_basic.py
tests/: test_se3.py  test_se3_sym.py  test_so3.py  test_so3_sym.py
