[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rattle"
version = "0.0.1"
authors = [  
  { name="taiki-ishigaki", email="taiki.ishigaki@ieee.org" },
]
description = "basic mathematical library for robotics reserach"
readme = "README.md"

license = {text = "MIT License"}
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Taiki-Ishigaki/sui"